--- a/GymnasticsStudioServer/DTO/DTO.csproj
+++ b/GymnasticsStudioServer/DTO/DTO.csproj
@@ -31,12 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dal, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Dal">
       <HintPath>..\Dal\bin\Debug\Dal.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework">
       <HintPath>..\Dal\bin\Debug\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
