--- a/GymnasticsStudioServer/GymnasticsStudioServer/Web.config
+++ b/GymnasticsStudioServer/GymnasticsStudioServer/Web.config
@@ -83,6 +83,7 @@
   </system.webServer>
   <connectionStrings>
     <add name="Gymnastics_Studio_DataEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=DESKTOP-3T4BKQI\SQLEXPRESS;initial catalog=&quot;Gymnastics Studio Data&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+    <!--<add name="Gymnastics_Studio_DataEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-B6F4SVRM;initial catalog=Gymnastics Studio Data;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <providers>
