--- a/GymnasticsStudioServer/DTO/DTO.csproj
+++ b/GymnasticsStudioServer/DTO/DTO.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParticularSubScriptionDTO.cs" />
     <Compile Include="PaymentDTO.cs" />
     <Compile Include="LessonDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
