--- a/GymnasticsStudioServer/GymnasticsStudioServer/GymnasticsStudioServer.csproj
+++ b/GymnasticsStudioServer/GymnasticsStudioServer/GymnasticsStudioServer.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\LessonController.cs" />
+    <Compile Include="Controllers\ParticularSubScriptionController.cs" />
     <Compile Include="Controllers\TeacherController.cs" />
     <Compile Include="Controllers\StudentInLessonController.cs" />
     <Compile Include="Controllers\StudentInSubscriptionController.cs" />
@@ -237,6 +238,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\ParticularSubScription\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
