--- a/GymnasticsStudioServer/DTO/DTO.csproj
+++ b/GymnasticsStudioServer/DTO/DTO.csproj
@@ -63,6 +63,7 @@
     <Compile Include="SubscreptionOfPaymentDTO.cs" />
     <Compile Include="SubscriptionDTO.cs" />
     <Compile Include="TeacherDTO.cs" />
+    <Compile Include="UploadsFileDTO.cs" />
     <Compile Include="WeekDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
